@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,12 +21,14 @@ import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.AmazonS3ClientBuilder;
 import com.amazonaws.services.sqs.AmazonSQS;
 import com.amazonaws.services.sqs.AmazonSQSClientBuilder;
+import com.amazonaws.services.sqs.model.GetQueueAttributesRequest;
+import com.amazonaws.services.sqs.model.Message;
 import com.amazonaws.services.sqs.model.ReceiveMessageRequest;
-import com.amazonaws.services.sqs.model.ReceiveMessageResult;
 import com.amazonaws.services.sqs.model.SendMessageRequest;
-import org.apache.hadoop.fs.Path;
-import org.apache.parquet.hadoop.ParquetWriter;
+import com.amazonaws.services.sqs.model.SetQueueAttributesRequest;
+import org.apache.hadoop.conf.Configuration;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.testcontainers.containers.localstack.LocalStackContainer;
@@ -42,10 +44,10 @@ import sleeper.compaction.status.store.job.DynamoDBCompactionJobStatusStoreCreat
 import sleeper.compaction.status.store.task.CompactionTaskStatusStoreFactory;
 import sleeper.compaction.status.store.task.DynamoDBCompactionTaskStatusStoreCreator;
 import sleeper.compaction.task.CompactionTaskStatusStore;
-import sleeper.compaction.task.CompactionTaskType;
 import sleeper.configuration.jars.ObjectFactory;
 import sleeper.configuration.properties.PropertiesReloader;
 import sleeper.configuration.properties.instance.InstanceProperties;
+import sleeper.configuration.properties.instance.InstanceProperty;
 import sleeper.configuration.properties.table.S3TableProperties;
 import sleeper.configuration.properties.table.TableProperties;
 import sleeper.configuration.properties.table.TablePropertiesProvider;
@@ -56,29 +58,40 @@ import sleeper.core.record.Record;
 import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.LongType;
-import sleeper.core.statestore.FileInfo;
+import sleeper.core.statestore.FileReference;
+import sleeper.core.statestore.FileReferenceFactory;
 import sleeper.core.statestore.StateStore;
 import sleeper.core.statestore.StateStoreException;
-import sleeper.io.parquet.record.ParquetRecordWriterFactory;
+import sleeper.ingest.IngestFactory;
+import sleeper.ingest.impl.IngestCoordinator;
+import sleeper.statestore.FixedStateStoreProvider;
 import sleeper.statestore.StateStoreProvider;
 import sleeper.statestore.s3.S3StateStoreCreator;
 
-import java.util.Arrays;
+import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.function.Function;
+import java.util.stream.Stream;
 
-import static java.nio.file.Files.createTempDirectory;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 import static sleeper.configuration.properties.InstancePropertiesTestHelper.createTestInstanceProperties;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_DLQ_URL;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_QUEUE_URL;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.CONFIG_BUCKET;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.DATA_BUCKET;
 import static sleeper.configuration.properties.instance.CommonProperty.FILE_SYSTEM;
+import static sleeper.configuration.properties.instance.IngestProperty.INGEST_PARTITION_FILE_WRITER_TYPE;
 import static sleeper.configuration.properties.table.TablePropertiesTestHelper.createTestTableProperties;
 import static sleeper.configuration.properties.table.TableProperty.COMPACTION_FILES_BATCH_SIZE;
 import static sleeper.configuration.properties.table.TableProperty.TABLE_ID;
 import static sleeper.configuration.testutils.LocalStackAwsV1ClientHelper.buildAwsV1Client;
-import static sleeper.utils.HadoopConfigurationLocalStackUtils.getHadoopConfiguration;
+import static sleeper.io.parquet.utils.HadoopConfigurationLocalStackUtils.getHadoopConfiguration;
 
 @Testcontainers
 public class CompactSortedFilesRunnerLocalStackIT {
@@ -91,18 +104,20 @@ public class CompactSortedFilesRunnerLocalStackIT {
     private final AmazonDynamoDB dynamoDB = buildAwsV1Client(localStackContainer, LocalStackContainer.Service.DYNAMODB, AmazonDynamoDBClientBuilder.standard());
     private final AmazonSQS sqs = buildAwsV1Client(localStackContainer, LocalStackContainer.Service.SQS, AmazonSQSClientBuilder.standard());
     private final InstanceProperties instanceProperties = createInstance();
-    private final StateStoreProvider stateStoreProvider = new StateStoreProvider(dynamoDB, instanceProperties, getHadoopConfiguration(localStackContainer));
+    private final Configuration configuration = getHadoopConfiguration(localStackContainer);
+    private final StateStoreProvider stateStoreProvider = new StateStoreProvider(dynamoDB, instanceProperties, configuration);
     private final TablePropertiesStore tablePropertiesStore = S3TableProperties.getStore(instanceProperties, s3, dynamoDB);
     private final TablePropertiesProvider tablePropertiesProvider = new TablePropertiesProvider(instanceProperties, s3, dynamoDB);
     private final Schema schema = createSchema();
     private final TableProperties tableProperties = createTable();
     private final String tableId = tableProperties.get(TABLE_ID);
+    private final CompactionJobStatusStore jobStatusStore = CompactionJobStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
+    private final CompactionTaskStatusStore taskStatusStore = CompactionTaskStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
 
     private InstanceProperties createInstance() {
         InstanceProperties instanceProperties = createTestInstanceProperties();
-        instanceProperties.set(COMPACTION_JOB_QUEUE_URL, sqs.createQueue(UUID.randomUUID().toString()).getQueueUrl());
         instanceProperties.set(FILE_SYSTEM, "");
-
+        instanceProperties.set(INGEST_PARTITION_FILE_WRITER_TYPE, "direct");
         s3.createBucket(instanceProperties.get(CONFIG_BUCKET));
         s3.createBucket(instanceProperties.get(DATA_BUCKET));
         instanceProperties.saveToS3(s3);
@@ -131,7 +146,7 @@ public class CompactSortedFilesRunnerLocalStackIT {
         return tableProperties;
     }
 
-    private StateStore stateStore() {
+    private StateStore getStateStore() {
         return stateStoreProvider.getStateStore(tableProperties);
     }
 
@@ -142,104 +157,49 @@ public class CompactSortedFilesRunnerLocalStackIT {
         sqs.shutdown();
     }
 
+    @BeforeEach
+    void setUp() {
+        DynamoDBCompactionJobStatusStoreCreator.create(instanceProperties, dynamoDB);
+        DynamoDBCompactionTaskStatusStoreCreator.create(instanceProperties, dynamoDB);
+    }
+
     @TempDir
-    public java.nio.file.Path folder;
+    public java.nio.file.Path tempDir;
 
     @Test
-    void shouldDeleteMessages() throws Exception {
+    void shouldDeleteMessagesIfJobSuccessful() throws Exception {
         // Given
-        DynamoDBCompactionJobStatusStoreCreator.create(instanceProperties, dynamoDB);
-        CompactionJobStatusStore jobStatusStore = CompactionJobStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
-        DynamoDBCompactionTaskStatusStoreCreator.create(instanceProperties, dynamoDB);
-        CompactionTaskStatusStore taskStatusStore = CompactionTaskStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
+        configureJobQueuesWithMaxReceiveCount(10);
         // - Create four files of sorted data
-        String folderName = createTempDirectory(folder, null).toString();
-        String file1 = folderName + "/file1.parquet";
-        String file2 = folderName + "/file2.parquet";
-        String file3 = folderName + "/file3.parquet";
-        String file4 = folderName + "/file4.parquet";
-        FileInfo fileInfo1 = FileInfo.builder()
-                .filename(file1)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        FileInfo fileInfo2 = FileInfo.builder()
-                .filename(file2)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        FileInfo fileInfo3 = FileInfo.builder()
-                .filename(file3)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        FileInfo fileInfo4 = FileInfo.builder()
-                .filename(file4)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        ParquetWriter<Record> writer1 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file1), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i);
-            record.put("value1", (long) 2 * i);
-            record.put("value2", 987654321L);
-            writer1.write(record);
-        }
-        writer1.close();
-        ParquetWriter<Record> writer2 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file2), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i + 1);
-            record.put("value1", 1001L);
-            record.put("value2", 123456789L);
-            writer2.write(record);
-        }
-        writer2.close();
-        ParquetWriter<Record> writer3 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file3), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i);
-            record.put("value1", (long) 2 * i);
-            record.put("value2", 987654321L);
-            writer3.write(record);
-        }
-        writer3.close();
-        ParquetWriter<Record> writer4 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file4), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i + 1);
-            record.put("value1", 1001L);
-            record.put("value2", 123456789L);
-            writer4.write(record);
-        }
-        writer4.close();
-        // - Update Dynamo state store with details of files
-        stateStore().addFiles(Arrays.asList(fileInfo1, fileInfo2, fileInfo3, fileInfo4));
+        StateStore stateStore = getStateStore();
+        FileReference fileReference1 = ingestFileWith100Records(i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i,
+                        "value1", (long) 2 * i,
+                        "value2", 987654321L)));
+        FileReference fileReference2 = ingestFileWith100Records(i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i + 1,
+                        "value1", 1001L,
+                        "value2", 123456789L)));
+        FileReference fileReference3 = ingestFileWith100Records(i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i,
+                        "value1", (long) 2 * i,
+                        "value2", 987654321L)));
+        FileReference fileReference4 = ingestFileWith100Records(i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i + 1,
+                        "value1", 1001L,
+                        "value2", 123456789L)));
+
         // - Create two compaction jobs and put on queue
-        CompactionJob compactionJob1 = CompactionJob.builder()
-                .tableId(tableId)
-                .jobId("job1")
-                .partitionId("root")
-                .dimension(0)
-                .inputFiles(Arrays.asList(file1, file2))
-                .isSplittingJob(false)
-                .outputFile(folderName + "/output1.parquet").build();
-        CompactionJob compactionJob2 = CompactionJob.builder()
-                .tableId(tableId)
-                .jobId("job2")
-                .partitionId("root")
-                .dimension(0)
-                .inputFiles(Arrays.asList(file3, file4))
-                .isSplittingJob(false)
-                .outputFile(folderName + "/output2.parquet").build();
-        CompactionJobSerDe jobSerDe = new CompactionJobSerDe(tablePropertiesProvider);
-        String job1Json = jobSerDe.serialiseToString(compactionJob1);
-        String job2Json = jobSerDe.serialiseToString(compactionJob2);
+        CompactionJob job1 = compactionJobForFiles("job1", "output1.parquet", fileReference1, fileReference2);
+        CompactionJob job2 = compactionJobForFiles("job2", "output2.parquet", fileReference3, fileReference4);
+        stateStore.atomicallyAssignJobIdToFileReferences("job1", List.of(fileReference1, fileReference2));
+        stateStore.atomicallyAssignJobIdToFileReferences("job2", List.of(fileReference3, fileReference4));
+        String job1Json = CompactionJobSerDe.serialiseToString(job1);
+        String job2Json = CompactionJobSerDe.serialiseToString(job2);
         SendMessageRequest sendMessageRequest = new SendMessageRequest()
                 .withQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
                 .withMessageBody(job1Json);
@@ -250,24 +210,199 @@ public class CompactSortedFilesRunnerLocalStackIT {
         sqs.sendMessage(sendMessageRequest);
 
         // When
-        CompactSortedFilesRunner runner = new CompactSortedFilesRunner(
-                instanceProperties, ObjectFactory.noUserJars(),
-                tablePropertiesProvider, PropertiesReloader.neverReload(), stateStoreProvider, jobStatusStore, taskStatusStore,
-                "task-id", instanceProperties.get(COMPACTION_JOB_QUEUE_URL), sqs, null, CompactionTaskType.COMPACTION,
-                1, 0);
-        runner.run();
+        createJobRunner("task-id").run();
 
         // Then
         // - There should be no messages left on the queue
-        ReceiveMessageRequest receiveMessageRequest = new ReceiveMessageRequest()
-                .withQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
-                .withWaitTimeSeconds(2);
-        ReceiveMessageResult result = sqs.receiveMessage(receiveMessageRequest);
-        assertThat(result.getMessages()).isEmpty();
-        // - Check DynamoDBStateStore has correct active files
-        List<FileInfo> activeFiles = stateStore().getActiveFiles();
+        assertThat(messagesOnQueue(COMPACTION_JOB_QUEUE_URL)).isEmpty();
+        // - Check DynamoDBStateStore has correct file references
+        List<FileReference> activeFiles = stateStore.getFileReferences();
         assertThat(activeFiles)
-                .extracting(FileInfo::getFilename)
-                .containsExactlyInAnyOrder(compactionJob1.getOutputFile(), compactionJob2.getOutputFile());
+                .extracting(FileReference::getFilename)
+                .containsExactlyInAnyOrder(job1.getOutputFile(), job2.getOutputFile());
+    }
+
+    @Test
+    void shouldPutMessageBackOnSQSQueueIfJobFailed() throws Exception {
+        // Given
+        configureJobQueuesWithMaxReceiveCount(10);
+        StateStore stateStore = getStateStore();
+        FileReferenceFactory factory = FileReferenceFactory.from(stateStore);
+        // - Create a compaction job for a non-existent file
+        String jobJson = sendCompactionJobForFilesGetJson("job1", "output1.parquet",
+                factory.rootFile("not-a-file.parquet", 0L));
+
+        // When
+        createJobRunner("task-id").run();
+
+        // Then
+        // - The compaction job should be put back on the queue
+        assertThat(messagesOnQueue(COMPACTION_JOB_QUEUE_URL)).containsExactly(jobJson);
+        // - No file references should be in the state store
+        assertThat(stateStore.getFileReferences()).isEmpty();
+    }
+
+    @Test
+    void shouldMoveMessageToDLQIfJobFailedTooManyTimes() throws Exception {
+        // Given
+        configureJobQueuesWithMaxReceiveCount(2);
+        StateStore stateStore = getStateStore();
+        FileReferenceFactory factory = FileReferenceFactory.from(stateStore);
+        // - Create a compaction job for a non-existent file
+        String jobJson = sendCompactionJobForFilesGetJson("job1", "output1.parquet",
+                factory.rootFile("not-a-file.parquet", 0L));
+
+
+        // When
+        createJobRunner("task-id").run();
+        createJobRunner("task-id").run();
+        createJobRunner("task-id").run();
+
+        // Then
+        // - The compaction job should no longer be on the job queue
+        assertThat(messagesOnQueue(COMPACTION_JOB_QUEUE_URL)).isEmpty();
+        // - The compaction job should be on the DLQ
+        assertThat(messagesOnQueue(COMPACTION_JOB_DLQ_URL))
+                .containsExactly(jobJson);
+        // - No file references should be in the state store
+        assertThat(stateStore.getFileReferences()).isEmpty();
+    }
+
+    @Test
+    void shouldPutMessageBackOnSQSQueueIfStateStoreUpdateFailed() throws Exception {
+        // Given
+        configureJobQueuesWithMaxReceiveCount(2);
+        StateStore stateStore = mock(StateStore.class);
+        doThrow(new StateStoreException("Failed to update state store"))
+                .when(stateStore).atomicallyReplaceFileReferencesWithNewOne(anyString(), anyString(), any(), any());
+        FileReference fileReference1 = ingestFileWith100Records();
+        FileReference fileReference2 = ingestFileWith100Records();
+        String jobJson = sendCompactionJobForFilesGetJson("job1", "output1.parquet", fileReference1, fileReference2);
+
+        // When
+        createJobRunner("task-id", new FixedStateStoreProvider(tableProperties, stateStore)).run();
+
+        // Then
+        // - The compaction job should be put back on the queue
+        assertThat(messagesOnQueue(COMPACTION_JOB_QUEUE_URL))
+                .containsExactly(jobJson);
+        // - No file references should be in the state store
+        assertThat(stateStore.getFileReferences()).isEmpty();
+    }
+
+    @Test
+    void shouldMoveMessageToDLQIfStateStoreUpdateFailedTooManyTimes() throws Exception {
+        // Given
+        configureJobQueuesWithMaxReceiveCount(2);
+        StateStore stateStore = mock(StateStore.class);
+        doThrow(new StateStoreException("Failed to update state store"))
+                .when(stateStore).atomicallyReplaceFileReferencesWithNewOne(anyString(), anyString(), any(), any());
+        FileReference fileReference1 = ingestFileWith100Records();
+        FileReference fileReference2 = ingestFileWith100Records();
+        String jobJson = sendCompactionJobForFilesGetJson("job1", "output1.parquet", fileReference1, fileReference2);
+
+        // When
+        StateStoreProvider provider = new FixedStateStoreProvider(tableProperties, stateStore);
+        createJobRunner("task-id", provider).run();
+        createJobRunner("task-id", provider).run();
+        createJobRunner("task-id", provider).run();
+
+        // Then
+        // - The compaction job should no longer be on the job queue
+        assertThat(messagesOnQueue(COMPACTION_JOB_QUEUE_URL)).isEmpty();
+        // - The compaction job should be on the DLQ
+        assertThat(messagesOnQueue(COMPACTION_JOB_DLQ_URL))
+                .containsExactly(jobJson);
+        // - No file references should be in the state store
+        assertThat(stateStore.getFileReferences()).isEmpty();
+    }
+
+    private Stream<String> messagesOnQueue(InstanceProperty queueProperty) {
+        return sqs.receiveMessage(new ReceiveMessageRequest()
+                        .withQueueUrl(instanceProperties.get(queueProperty))
+                        .withWaitTimeSeconds(2))
+                .getMessages().stream()
+                .map(Message::getBody);
+    }
+
+    private void configureJobQueuesWithMaxReceiveCount(int maxReceiveCount) {
+        String jobQueueUrl = sqs.createQueue(UUID.randomUUID().toString()).getQueueUrl();
+        String jobDlqUrl = sqs.createQueue(UUID.randomUUID().toString()).getQueueUrl();
+        String jobDlqArn = sqs.getQueueAttributes(new GetQueueAttributesRequest()
+                .withQueueUrl(jobDlqUrl)
+                .withAttributeNames("QueueArn")).getAttributes().get("QueueArn");
+        sqs.setQueueAttributes(new SetQueueAttributesRequest()
+                .withQueueUrl(jobQueueUrl)
+                .addAttributesEntry("RedrivePolicy",
+                        "{\"maxReceiveCount\":\"" + maxReceiveCount + "\", "
+                                + "\"deadLetterTargetArn\":\"" + jobDlqArn + "\"}"));
+        instanceProperties.set(COMPACTION_JOB_QUEUE_URL, jobQueueUrl);
+        instanceProperties.set(COMPACTION_JOB_DLQ_URL, jobDlqUrl);
+    }
+
+    private CompactSortedFilesRunner createJobRunner(String taskId) {
+        return createJobRunner(taskId, stateStoreProvider);
+    }
+
+    private CompactSortedFilesRunner createJobRunner(String taskId, StateStoreProvider stateStoreProvider) {
+        return CompactSortedFilesRunner.builder()
+                .instanceProperties(instanceProperties)
+                .objectFactory(ObjectFactory.noUserJars())
+                .tablePropertiesProvider(tablePropertiesProvider)
+                .propertiesReloader(PropertiesReloader.neverReload())
+                .stateStoreProvider(stateStoreProvider)
+                .jobStatusStore(jobStatusStore)
+                .taskStatusStore(taskStatusStore)
+                .taskId(taskId)
+                .sqsJobQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
+                .sqsClient(sqs)
+                .maxMessageRetrieveAttempts(1)
+                .waitTimeSeconds(0)
+                .build();
+    }
+
+    private FileReference ingestFileWith100Records() throws Exception {
+        return ingestFileWith100Records(i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i,
+                        "value1", (long) 2 * i,
+                        "value2", 987654321L)));
+    }
+
+    private FileReference ingestFileWith100Records(Function<Integer, Record> recordCreator) throws Exception {
+        IngestFactory ingestFactory = IngestFactory.builder()
+                .objectFactory(ObjectFactory.noUserJars())
+                .hadoopConfiguration(configuration)
+                .localDir(tempDir.toString())
+                .stateStoreProvider(new FixedStateStoreProvider(tableProperties, getStateStore()))
+                .instanceProperties(instanceProperties)
+                .build();
+        IngestCoordinator<Record> coordinator = ingestFactory.createIngestCoordinator(tableProperties);
+        for (int i = 0; i < 100; i++) {
+            coordinator.write(recordCreator.apply(i));
+        }
+        return coordinator.closeReturningResult().getFileReferenceList().get(0);
+    }
+
+    private String sendCompactionJobForFilesGetJson(String jobId, String outputFilename, FileReference... fileReferences) throws IOException {
+        return sendJobForFilesGetJson(compactionJobForFiles(jobId, outputFilename, fileReferences));
+    }
+
+    private String sendJobForFilesGetJson(CompactionJob job) throws IOException {
+        String jobJson = CompactionJobSerDe.serialiseToString(job);
+        SendMessageRequest sendMessageRequest = new SendMessageRequest()
+                .withQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
+                .withMessageBody(jobJson);
+        sqs.sendMessage(sendMessageRequest);
+        return jobJson;
+    }
+
+    private CompactionJob compactionJobForFiles(String jobId, String outputFilename, FileReference... fileReferences) {
+        return CompactionJob.builder()
+                .tableId(tableId)
+                .jobId(jobId)
+                .partitionId("root")
+                .inputFileReferences(List.of(fileReferences))
+                .outputFile(tempDir + "/" + outputFilename).build();
     }
 }
