@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,9 +21,9 @@ import sleeper.compaction.job.CompactionJob;
 import sleeper.compaction.job.CompactionJobStatusTestData;
 import sleeper.compaction.status.store.testutils.DynamoDBCompactionJobStatusStoreTestBase;
 import sleeper.core.partition.Partition;
-import sleeper.core.statestore.FileInfoFactory;
+import sleeper.core.statestore.FileReferenceFactory;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -33,15 +33,15 @@ public class QueryAllCompactionJobsIT extends DynamoDBCompactionJobStatusStoreTe
     public void shouldReturnMultipleCompactionJobsSortedMostRecentFirst() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job1 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file1", 123L, "a", "c")),
+                List.of(fileFactory.rootFile("file1", 123L)),
                 partition.getId());
         CompactionJob job2 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file2", 456L, "d", "f")),
+                List.of(fileFactory.rootFile("file2", 456L)),
                 partition.getId());
         CompactionJob job3 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file3", 789L, "g", "i")),
+                List.of(fileFactory.rootFile("file3", 789L)),
                 partition.getId());
 
         // When
@@ -62,12 +62,12 @@ public class QueryAllCompactionJobsIT extends DynamoDBCompactionJobStatusStoreTe
     public void shouldExcludeCompactionJobInOtherTable() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job1 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file1", 123L, "a", "c")),
+                List.of(fileFactory.rootFile("file1", 123L)),
                 partition.getId());
         CompactionJob job2 = jobFactoryForOtherTable().createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file2", 456L, "d", "f")),
+                List.of(fileFactory.rootFile("file2", 456L)),
                 partition.getId());
 
         // When
@@ -82,7 +82,6 @@ public class QueryAllCompactionJobsIT extends DynamoDBCompactionJobStatusStoreTe
 
     @Test
     public void shouldReturnNoCompactionJobs() {
-
         // When / Then
         assertThat(store.getAllJobs(tableId)).isEmpty();
     }
