@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,10 +22,10 @@ import sleeper.compaction.status.store.testutils.DynamoDBCompactionJobStatusStor
 import sleeper.core.partition.Partition;
 import sleeper.core.record.process.RecordsProcessed;
 import sleeper.core.record.process.RecordsProcessedSummary;
-import sleeper.core.statestore.FileInfoFactory;
+import sleeper.core.statestore.FileReferenceFactory;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static sleeper.compaction.job.CompactionJobStatusTestData.finishedCompactionRun;
@@ -37,9 +37,9 @@ public class StoreCompactionJobUpdatesIT extends DynamoDBCompactionJobStatusStor
     public void shouldReportCompactionJobStartedSeparatelyFromCreation() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(100L, "a", "z")),
+                List.of(fileFactory.rootFile(100L)),
                 partition.getId());
 
         // When
@@ -56,9 +56,9 @@ public class StoreCompactionJobUpdatesIT extends DynamoDBCompactionJobStatusStor
     public void shouldReportCompactionJobFinishedSeparatelyFromOthers() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(100L, "a", "z")),
+                List.of(fileFactory.rootFile(100L)),
                 partition.getId());
 
         // When
@@ -76,9 +76,9 @@ public class StoreCompactionJobUpdatesIT extends DynamoDBCompactionJobStatusStor
     public void shouldReportLatestUpdatesWhenJobIsRunMultipleTimes() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(100L, "a", "z")),
+                List.of(fileFactory.rootFile(100L)),
                 partition.getId());
         Instant startTime1 = Instant.parse("2022-10-03T15:19:01.001Z");
         Instant finishTime1 = Instant.parse("2022-10-03T15:19:31.001Z");
